force-app/main/default/objects/Adhoc_Fee__c/Adhoc_Fee__c.object-meta.xml
<CustomObject>
    <label>Adhoc Fee</label>
    <nameField>
        <label>Fee Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adhoc Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>