force-app/main/default/objects/Adhoc_Fee__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Academic Year</label>
    <referenceTo>Academic_Year__c</referenceTo>
    <relationshipLabel>Adhoc Fees</relationshipLabel>
    <relationshipName>Adhoc_Fees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>